# workshops-2024-12

./: .env.example  .gitignore  README.md  biome.json  generate-baml.sh
baml_src/: clients.baml  form-filler.baml  generators.baml  resume.baml
python/: form_filler_app.py  pyproject.toml  resume.py  resume.txt
python/form_filler/: __init__.py  app.py  form.py  utils.py
typescript/: next.config.ts  package-lock.json  package.json
typescript/app/: page.tsx
typescript/app/_actions/: ai-actions.ts
typescript/app/_components/: section-loader.tsx
typescript/app/_hooks/: useStream.ts
typescript/app/resume/: page.tsx  resume-component.tsx
